# learn-rust-cli

./: Cargo.toml  LICENSE.txt  PKGBUILD  READMD.md
.github/workflows/: build.yml  main.yml  release.yml
src/: lib.rs  main.rs
tests/: cli.rs
