[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# Make tests work with the name used in the tutorial
[[bin]]
name = "grrs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
indicatif = "0.17.9"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
