[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
authors = ["Rust CLI WG"]
license = "MIT"
description = "An alternative to `grep` but worse"
readme = "READMD.md"
homepage = "https://github.com/rust-cli/book/tree/master/src/tutorial"
repository = "https://github.com/thuyencode/learn-rust-cli"
keywords = ["cli", "search", "grep"]
categories = ["command-line-utilities"]

# Make tests work with the name used in the tutorial
[[bin]]
name = "grrs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
indicatif = "0.17.9"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.3"
